# trekreturns

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
TrekReturns/: functions.py
trekreturns/: main.py
